# uq-roadmap

./: .gitignore  README.md  docker-compose.yml  flake.nix
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pr_form.yml
.github/workflows/: backend_static_analysis.yml  backend_test.yml  build_and_push.yml  build_backend.yml  build_frontend.yml
backend/: .coverage  .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  refresh_local.sh
backend/data/: plans.json  program_details.json  program_meta.json
backend/scripts/: get_unique_modes.py
backend/src/api/: __init__.py  config.py  errors.py  main.py  plan.py  schemas.py
backend/src/api/course/: __init__.py  models.py  routes.py  schemas.py  service.py  transformers.py
backend/src/api/courses/: models.py  routes.py  schemas.py  service.py  transformers.py
backend/src/api/database/: deps.py  mixins.py  seed.py  service.py
backend/src/api/degree/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/src/api/plan/: model.py  plan.py  routes.py  schemas.py  service.py
backend/src/api/plans/: model.py  routes.py  service.py
backend/src/common/: __init__.py  enums.py  logging.py  reqs.py  reqs_parsing.py  schemas.py
backend/src/degree/: aux_rule.py  converter.py  degree.py  params.py  sr_rule.py  srs_rule.py  validate_result.py
backend/src/scraper/: __init__.py  constants.py  courses.py  degree.py  main.py  models.py  plans.py  program_details.py  programs.py
backend/src/scraper/courses/: __init__.py  constants.py  models.py  secats.py  service.py
backend/src/scripts/: constants.py  get_unique_modes.py  merge_secat_course.py  unique_course_vals.py  utils.py
backend/src/uqroadmap/: config.py  enums.py  main.py
backend/src/uqroadmap/database/: base.py  deps.py  logger.py  service.py
backend/src/uqroadmap/degree/: models.py  routes.py  schemas.py  service.py
backend/src/uqscraper/: constants.py  courses.py  models.py  programs.py
backend/tests/test_common/: test_reqs.py
backend2/: .env  .gitattributes  Cargo.toml  Dockerfile
backend2/.helix/: languages.toml
backend2/.sqlx/: query-47375a0354f61483e63ec03e4f71dad443daaca92fe8225fcff5ca7fff78abf5.json  query-6e12f5f0558d578c909ebb2e8ba23b70e5a5e5431a72944878f440ebcffa597e.json  query-7be917eac822a08e7aa7a0577bcdb14f7303c993c5534a45279d0e173c9797c9.json
backend2/data/: complete_courses.json  program_details.json
backend2/migrations/: 20250819105807_base.sql  20250819205621_secat.sql
backend2/src/: main.rs
backend2/src/api/: mod.rs  openapi.rs
backend2/src/db/: course.rs  course_details.rs  mod.rs  secat.rs
backend2/src/db/seed/: courses.rs
backend2/src/verifier/: aux_rule.rs  mod.rs  processed.rs  raw.rs
data/: magic.json
data/course_reqs/: beme_reqs.json  compsci.json  law.json
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/api/: common.ts
frontend/app/api/course/: route.ts  types.ts
frontend/app/api/course/[id]/: route.ts
frontend/app/api/courseData/[id]/: route.ts
frontend/app/api/courses/: route.ts
frontend/app/api/courses/[id]/: route.ts
frontend/app/api/degree/: route.ts
frontend/app/api/degree/summary/: route.ts
frontend/app/api/degrees/: route.ts  types.ts
frontend/app/api/degrees/summary/: route.ts
frontend/app/api/plan/: route.ts  types.ts
frontend/app/api/plan/[id]/: route.ts
frontend/app/api/plan/[id]/validate/: route.ts
frontend/app/api/plans/: route.ts  types.ts
frontend/app/api/plans/[id]/: route.ts
frontend/app/plan/: old.tsx  page.tsx  plans.tsx
frontend/app/plan/[id]/: page.tsx  planDetails.tsx  planValidate.tsx
frontend/app/sem-plan/: page.tsx
frontend/app/start/: Dropdown.tsx  major-comp.tsx  page.tsx  validate.tsx
frontend/components/: \  alert.tsx  auth-layout.tsx  badge.tsx  button.tsx  checkbox.tsx  combobox.tsx  custom-sensors.ts  description-list.tsx  dialog.tsx  divider.tsx  draggable.tsx  dropdown.tsx  droppable.tsx  fieldset.tsx  input.tsx  pagination.tsx  radio.tsx  select.tsx  switch.tsx  text.tsx  textarea.tsx
frontend/components/custom/: CourseCard.tsx  Dropdown.tsx  course-card.tsx  footer.tsx  header.tsx  logo.tsx  overview.tsx  palette.tsx  progressCircle.tsx
frontend/types/: course.ts  plan.ts
