[project]
name = "uqroadmap"
version = "0.1.0"
description = "Backend for UQ Roadmap"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "bs4>=0.0.2",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyserde>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.43",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.mypy]
mypy_path = "uqroadmap"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "RET503", "EM101", "TRY003", "G004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"src/uqroadmap/database/service.py" = ["PLC0415", "F401"] # These are needed for create db tables
