[project]
name = "uqroadmap"
version = "0.1.0"
description = "Backend for UQ Roadmap"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "bs4>=0.0.2",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyserde>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.13.0",
    "playwright>=1.54.0",
    "orjson>=3.11.2",
    "lark>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]

[tool.pytest.ini_options]
pythonpath = "src"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
mypy_path = "uqroadmap"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "RET503", "EM101", "TRY003", "G004", "EM102"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"src/api/database/service.py" = ["PLC0415", "F401"] # These are needed for create db tables

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures
    "FBT",     # Don't care about booleans as positional arguments in tests
    "PLR2004", # Magic values
    "INP001",  # No __init__.py files
    "ANN201",
    "D103",
    "PT023",
    "PT001",
]
