[package]
name = "backend2"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.15.0", features = ["axum", "swagger"] }
anyhow = "1.0.99"
axum = "0.8.4"
lalrpop = "0.22.2"
logru = "0.4.1"
nom = "8.0.0"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = "0.8.6"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
