cargo-features = ["codegen-backend"]

[package]
name = "backend2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
lalrpop = "0.22.2"
logru = "0.4.1"
nom = "8.0.0"
schemars = { version = "1.0.4", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.0", features = ["serde", "std", "v4"] }
